--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
                 <div class="project-card">
                     <h3>CV Guy (completed in 2025)</h3>
-                    <p>A simple resume builder website to make youre resume more attractive and acceptable to people</p>
+                    <p>A simple resume builder website to make your resume more attractive and acceptable to people</p>
                 </div>
 
                 <div class="project-card">
